# novax402

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  create-git-history.ps1  create-realistic-history.ps1  package.json  pnpm-workspace.yaml  turbo.json
.github/workflows/: c.yml  go.yml  python.yml  rust.yml  typescript.yml
c/: CMakeLists.txt  README.md  nova402.h
docs/: architecture.md  getting-started.md
e2e/: README.md
examples/python/fastapi-server/: README.md  main.py  requirements.txt
examples/typescript/express-server/: README.md  package.json
examples/typescript/express-server/src/: index.ts
go/: README.md  go.mod
go/pkg/nova402/: client.go  constants.go  types.go
python/: README.md
python/nova402/: README.md  pyproject.toml  setup.py
python/nova402/src/nova402/: __init__.py  constants.py  protocol.py
rust/: Cargo.toml  README.md
rust/nova402-cli/: Cargo.toml  README.md
rust/nova402-cli/src/: main.rs
rust/nova402-core/: Cargo.toml  README.md
rust/nova402-core/src/: lib.rs  merkle.rs
specs/: x402-protocol.md
typescript/: README.md  package.json  tsconfig.base.json  turbo.json
