[workspace]
members = [
    "nova402-core",
    "nova402-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Nova402 Team <dev@nova402.com>"]
license = "Apache-2.0"
repository = "https://github.com/nova402/nova-utils"
homepage = "https://nova402.com"

[workspace.dependencies]
secp256k1 = { version = "0.28", features = ["recovery", "rand"] }
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

