[package]
name = "nova402-cli"
version = "1.0.0"
edition = "2021"
authors = ["Nova402 Team <dev@nova402.com>"]
description = "Command-line tools for Nova402 x402 payment protocol"
license = "Apache-2.0"
repository = "https://github.com/nova402/nova-utils"
homepage = "https://nova402.com"
keywords = ["x402", "cli", "payments", "blockchain", "nova402"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[[bin]]
name = "nova402"
path = "src/main.rs"

[dependencies]
nova402-core = { path = "../nova402-core", version = "1.0" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
hex = "0.4"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

