[package]
name = "nova402-core"
version = "1.0.0"
edition = "2021"
authors = ["Nova402 Team <dev@nova402.com>"]
description = "High-performance cryptographic utilities for Nova402 x402 protocol"
license = "Apache-2.0"
repository = "https://github.com/nova402/nova-utils"
homepage = "https://nova402.com"
documentation = "https://docs.rs/nova402-core"
keywords = ["x402", "cryptography", "blockchain", "payments", "nova402"]
categories = ["cryptography", "web-programming", "api-bindings"]
readme = "README.md"

[dependencies]
secp256k1 = { version = "0.28", features = ["recovery", "rand", "global-context"] }
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "crypto_benchmarks"
harness = false

[lib]
name = "nova402_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

